--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
-.App-logo {
+/*.App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
-}
+}*/
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 50px;
   padding: 20px;
   color: white;
 }
@@ -22,7 +22,21 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+.Queue-Title {
+    background-color: #ae163e;
+    height: 15px;
+    padding: 20px;
+    color: white;
+}
+
+.HeatMap-Title {
+    background-color: #ae163e;
+    height: 15px;
+    padding: 20px;
+    color: white;
+}
+
+/*@keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}
+}*/
