--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: left;
 }
 
 /*.App-logo {
@@ -9,13 +8,14 @@
 
 .App-header {
   background-color: #222;
-  height: 50px;
+  height: 40px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  text-align: center;
+  font-size: 2.0em;
 }
 
 .App-intro {
